##*****************************************************************//
##    Albany 2.0:  Copyright 2012 Sandia Corporation               //
##    This Software is released under the BSD license detailed     //
##    in the file "license.txt" in the top-level Albany directory  //
##*****************************************************************//

# AMP ##################

add_subdirectory(meshes)
add_subdirectory(PhaseSteady)
add_subdirectory(PhaseTransient)
