##*****************************************************************//
##    Albany 2.0:  Copyright 2012 Sandia Corporation               //
##    This Software is released under the BSD license detailed     //
##    in the file "license.txt" in the top-level Albany directory  //
##*****************************************************************//

add_subdirectory(Mitchell_2D)
add_subdirectory(Mitchell_3D)
add_subdirectory(MultiLoadSet)
