##*****************************************************************//
##    Albany 2.0:  Copyright 2012 Sandia Corporation               //
##    This Software is released under the BSD license detailed     //
##    in the file "license.txt" in the top-level Albany directory  //
##*****************************************************************//

###################
set(PartitionTest.exe ${Albany_BINARY_DIR}/src/LCM/PartitionTest)
set(PartitionTestT.exe ${Albany_BINARY_DIR}/src/LCM/PartitionTestT)
set(Subdivision.exe   ${Albany_BINARY_DIR}/src/LCM/Subdivision)
set(SubdivisionT.exe   ${Albany_BINARY_DIR}/src/LCM/SubdivisionT)
set(MPS.exe           ${Albany_BINARY_DIR}/src/LCM/MaterialPointSimulator)
set(MPST.exe           ${Albany_BINARY_DIR}/src/LCM/MaterialPointSimulatorT)

IF(ALBANY_HAVE_STK)
IF(ALBANY_SEACAS)
  add_subdirectory(CrystalPlasticity)
  add_subdirectory(CohesiveElement)
  add_subdirectory(SurfaceElement)
  add_subdirectory(SurfaceElementLocking)
  add_subdirectory(SurfaceElementOrtiz)
  add_subdirectory(StabilizedTet4)
  add_subdirectory(KfieldBC)
  add_subdirectory(HeliumODEs)
  add_subdirectory(HeliumDamage)
  add_subdirectory(HydrogenKfieldBC)
  add_subdirectory(TorsionBC)
  add_subdirectory(Mechanics)
  add_subdirectory(CoupledSchwarz)
  add_subdirectory(MechanicsPorePressure)
  add_subdirectory(MechanicsWithHydrogen)
  add_subdirectory(MechanicsWithHelium)
  add_subdirectory(MechanicsWithTemperature)
  add_subdirectory(MechanicsRigidBody)
  add_subdirectory(Dynamics)
  add_subdirectory(Elasticity2DTraction)
  add_subdirectory(QuasiStaticElasticityMM3D)
  add_subdirectory(Partition)
  add_subdirectory(MaterialPointSimulator)
  add_subdirectory(Subdivision)
  add_subdirectory(ThermoMechanicalContact)
  add_subdirectory(BoreDemo)
  IF(ALBANY_EPETRA)
    add_subdirectory(HMC)
  ENDIF()
  IF(ALBANY_EPETRA AND ALBANY_PERIDIGM)
    add_subdirectory(PeridigmCoupling)
  ENDIF()
ENDIF()

add_subdirectory(Catalyst)
add_subdirectory(DomainTear2D)
add_subdirectory(RandomFracture3D)
add_subdirectory(ProjectionElasticity3D)
add_subdirectory(CapModelPlasticity3D)
add_subdirectory(StaticElasticity1D)
add_subdirectory(StaticElasticity2D)
add_subdirectory(StaticElasticity3D)
add_subdirectory(Elasticity3DPressureBC)
add_subdirectory(Elasticity2DTriangles)
add_subdirectory(TransientElasticity2D)
add_subdirectory(PoroElasticity2D)
add_subdirectory(PoroElasticity3D)
add_subdirectory(UnSatPoroElasticity3D)
add_subdirectory(TLPoroElasticity2D)
add_subdirectory(TLPoroElasticity3D)
add_subdirectory(ThermoElasticity2D)
add_subdirectory(ThermoElasticity3D)
add_subdirectory(ThermoMechanical3D)
add_subdirectory(ThermoPoroMechanics3D)
add_subdirectory(UnitTests)
add_subdirectory(GradientDamage)
add_subdirectory(ThermoMechanicalCan)

IF(ALBANY_LAME)
    add_subdirectory(LameStaticElasticity3D)
    add_subdirectory(LameMultiMaterials)
ENDIF()

IF(ALBANY_LAMENT)
  add_subdirectory(LamentStaticElasticity3D)
ENDIF()

IF(ALBANY_HYDRIDE)
  add_subdirectory(LaplaceBeltrami)
  IF(ALBANY_MPI)
    add_subdirectory(MultiScaleRing)
  ENDIF()
ENDIF()
ENDIF()

IF(ALBANY_SEACAS OR ALBANY_SCOREC)
  add_subdirectory(MechanicsTensileTet10)
ENDIF()

IF(ALBANY_SCOREC)
  add_subdirectory(SCOREC)
ENDIF()

IF(ALBANY_STK_PERCEPT)
  add_subdirectory(Heat2DSTKAdapt)
  add_subdirectory(Necking3DSTKAdapt)
ENDIF()

###################
