##*****************************************************************//
##    Albany 2.0:  Copyright 2012 Sandia Corporation               //
##    This Software is released under the BSD license detailed     //
##    in the file "license.txt" in the top-level Albany directory  //
##*****************************************************************//

set(runtest.py ${CMAKE_CURRENT_SOURCE_DIR}/runtest.py)

add_subdirectory(AnisotropicHyperelasticDamage)