##*****************************************************************//
##    Albany 3.0:  Copyright 2016 Sandia Corporation               //
##    This Software is released under the BSD license detailed     //
##    in the file "license.txt" in the top-level Albany directory  //
##*****************************************************************//

SET(ALBANY_PYTHON_N_MPI 2)

add_subdirectory(extremeEvent)
add_subdirectory(inputOutput)
add_subdirectory(linearAlgebra)
add_subdirectory(steadyHeat)
add_subdirectory(randCompress)
